--- a/.github/ISSUE_TEMPLATE/adr.yml
+++ b/.github/ISSUE_TEMPLATE/adr.yml
@@ -9,7 +9,7 @@ body:
     attributes:
       value: |
         Thanks for taking the time to create this ADR!
-  - type: input
+  - type: textarea
     id: context
     attributes:
       label: Context and Problem Statement
